HYDRAN-432: Modify resources in API
- Modify resources to return dynamic structure
- Added identifier as header attribute in user settings resource
- Added Turkraft as component to use when filtering which settings to
return
