# src/main/java/se/sundsvall/messagingsettings/api/MessagingSettingsDeprecatedResource20250902.java
@@ -45,16 +45,16 @@ import se.sundsvall.messagingsettings.service.MessagingSettingsService;
 /**
  * Class containing old deprecated resources marked for removal
  */
-class MessagingSettingsDeprecatedResource {
+class MessagingSettingsDeprecatedResource20250902 {
 
 	private final MessagingSettingsService messagingSettingsService;
 
-	MessagingSettingsDeprecatedResource(final MessagingSettingsService messagingSettingsService) {
+	MessagingSettingsDeprecatedResource20250902(final MessagingSettingsService messagingSettingsService) {
 		this.messagingSettingsService = messagingSettingsService;
 	}
 
 	/**
-	 * @deprecated Deprecated since 2025-09-02. Use sender-info resource with request parameters instead
+	 * @deprecated Deprecated since 2025-09-02. Use sender-info resource with request parameters instead.
 	 */
 	@Deprecated(since = "2025-09-02", forRemoval = true)
 	@GetMapping(path = "/{departmentId}/sender-info", produces = APPLICATION_JSON_VALUE)
@@ -72,7 +72,7 @@ class MessagingSettingsDeprecatedResource {
 	}
 
 	/**
-	 * @deprecated Deprecated since 2025-09-02. Use sender-info resource with request parameters instead
+	 * @deprecated Deprecated since 2025-09-02. Use sender-info resource with request parameters instead.
 	 */
 	@Deprecated(since = "2025-09-02", forRemoval = true)
 	@GetMapping(path = "/{namespace}/sender-infos", produces = APPLICATION_JSON_VALUE)
@@ -85,7 +85,7 @@ class MessagingSettingsDeprecatedResource {
 	}
 
 	/**
-	 * @deprecated Deprecated since 2025-09-02. Use sender-info resource with request parameters instead
+	 * @deprecated Deprecated since 2025-09-02. Use sender-info resource with request parameters instead.
 	 */
 	@Deprecated(since = "2025-09-02", forRemoval = true)
 	@GetMapping("/{namespace}/{departmentName}/sender-info")
@@ -100,5 +100,4 @@ class MessagingSettingsDeprecatedResource {
 			.findFirst()
 			.orElseThrow(() -> Problem.valueOf(Status.NOT_FOUND, "Sender info not found for municipality with ID '%s', namespace '%s' and department name '%s'.".formatted(municipalityId, namespace, departmentName))));
 	}
-	// END
 }
